update to image file name

--- a/knowus.html
+++ b/knowus.html
@@ -25,13 +25,13 @@
             <p>Priyanka Halder is a leader with a career that spans from startups to large enterprises. She has held leadership roles at companies such as HealthEdge, Oscar Health, Tinder, and GoodRx. Halder is known for specializing in building high-performing quality teams, implementing automation strategies, and navigating complex regulatory landscapes. She holds a Master of Science in Computer Science from California State University, Long Beach, and is a passionate advocate for women in technology. Halder is also a conference speaker who shares practical strategies for fostering a quality-first culture.</p>
           </div>
           <div class="profile-image left-aligned">
-            <img src="img/Priyanka.jpeg" alt="Priyanka Halder" />
+            <img src="img/priyanka.jpeg" alt="Priyanka Halder" />
           </div>
         </div>
         
         <div class="profile-container reverse">
           <div class="profile-image right-aligned">
-            <img src="img/Suma.jpeg" alt="Suma Umapathaiah" />
+            <img src="img/suma.jpeg" alt="Suma Umapathaiah" />
           </div>
           <div class="profile-content left-aligned">
             <h2>Suma Umapathaiah</h2>
