fix styling issues

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="mission-text">
           <h2>A Mother's Mission</h2>
-          <p>That night, while Ariya slept fitfully, Suma rolled up her sleeves and did what mothers do best – she solved the problem with love. Working through the night in Priyanka's kitchen, she created something extraordinary: <strong>40 nutritious rotis</strong> packed with everything growing bodies needed.</p>
+          <p>That night, while Ariya slept restlessly, Suma rolled up her sleeves and did what mothers do best—solve problems with love. In Priyanka’s kitchen, she worked through the night, crafting something extraordinary: <strong>40 wholesome, nutrient-packed rotis</strong> filled with everything a growing child needs. It was a recipe she had been perfecting for <strong>14 years</strong>, and when Priyanka saw the positive impact on Ariya, she knew instantly—this was something every mother would want for her child. And so, Krave was born, ready to be shared with the world.</p>
         </div>
       </div>
     </section>
