--- a/products.html
+++ b/products.html
@@ -31,10 +31,12 @@
             <ul class="product-features">
               <li>High in plant-based protein</li>
               <li>Rich in fiber</li>
+              <li>Essential nutrients</li>
+              <li>Organic ingredients</li>
               <li>No preservatives</li>
               <li>Ready in 2 minutes</li>
             </ul>
-            <button class="btn-primary">Add to Cart</button>
+            <button class="btn-primary">Coming Soon...</button>
           </div>
           
           <div class="product-card">
@@ -42,14 +44,17 @@
               <img src="img/product-kids-pack.jpg" alt="Kids Combo Pack" />
             </div>
             <h3>Kids Combo Pack</h3>
-            <p>Perfect variety pack with fun shapes and flavors kids adore.</p>
+            <p>Perfect variety pack with fun shapes and taste kids adore.</p>
             <ul class="product-features">
               <li>Fun shapes</li>
-              <li>Mildly spiced</li>
+              <li>High in plant-based protein</li>
+              <li>Rich in fiber</li>
               <li>Essential nutrients</li>
+              <li>Organic ingredients</li>
+              <li>No preservatives</li>
               <li>Ready in 2 minutes</li>
             </ul>
-            <button class="btn-primary">Add to Cart</button>
+            <button class="btn-primary">Coming Soon...</button>
           </div>
         </div>
       </div>
