--- a/reviews.html
+++ b/reviews.html
@@ -54,6 +54,19 @@
           </div>
         </div>
         
+        <div class="trusted-partners">
+          <h2>Trusted By Industry Leaders</h2>
+          <div class="partner-showcase">
+            <div class="partner-item">
+              <img src="img/OrganicMandyaSupport.jpg" alt="Organic Mandya Endorsement" class="partner-logo">
+              <div class="partner-info">
+                <h3>Supported by Organic Mandya</h3>
+                <p>We're proud to be supported by Organic Mandya Founder Madhu Chandan, a leader in organic food products. Their support validates our commitment to quality and nutrition.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <div class="add-review">
           <h2>Share Your Experience</h2>
           <p>We'd love to hear how Krave has helped your family!</p>
