link to OM promote

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="js/load-components.js" defer></script>
   <script src="js/parallax.js" defer></script>
+  <script src="js/overlay.js" defer></script>
 </head>
 <body>
   <!-- Header and Navigation will be loaded here by load-components.js -->
@@ -32,6 +33,7 @@
         <div class="hero-content">
           <h2>Krave: A Mother's Love in Every Bite</h2>
           <p>The inspiring story of two tech moms who created a revolutionary nutritious tortilla/roti to solve the challenges of feeding their children and other busy families.</p>
+          <a href="#" class="promotion-link">Look who is Promoting...</a>
         </div>
       </div>
     </section>
@@ -221,5 +223,14 @@
 
   </main>
   <!-- Footer is loaded by load-components.js -->
+  
+  <!-- Image Overlay -->
+  <div id="imageOverlay" class="image-overlay">
+    <div class="overlay-content">
+      <span class="close-overlay">&times;</span>
+      <img src="img/OrganicMandyaSupport.jpg" alt="Organic Mandya Support">
+    </div>
+  </div>
+
 </body>
 </html>
