--- a/reviews.html
+++ b/reviews.html
@@ -58,10 +58,9 @@
           <h2>Trusted By Industry Leaders</h2>
           <div class="partner-showcase">
             <div class="partner-item">
-              <img src="img/OrganicMandyaSupport.jpg" alt="Organic Mandya Endorsement" class="partner-logo">
               <div class="partner-info">
-                <h3>Supported by Organic Mandya</h3>
-                <p>We're proud to be supported by Organic Mandya Founder Madhu Chandan, a leader in organic food products. Their support validates our commitment to quality and nutrition.</p>
+                <h3>Mentored by Madhu Chandan, Founder, CEO of Organic Mandya</h3>
+                <p>We're proud to be supported by Organic Mandya Founder and CEO Madhu Chandan, a leader in organic food products. Their support validates our commitment to quality and nutrition.</p>
               </div>
             </div>
           </div>
