--- a/reviews.html
+++ b/reviews.html
@@ -60,7 +60,7 @@
             <div class="partner-item">
               <div class="partner-info">
                 <h3>Mentored by Madhu Chandan, Founder, CEO of Organic Mandya</h3>
-                <p>We're proud to be supported by Organic Mandya Founder and CEO Madhu Chandan, a leader in organic food products. Their support validates our commitment to quality and nutrition.</p>
+                <p>We're proud to be mentored by Organic Mandya Founder and CEO Madhu Chandan, a leader in organic food products. Their support validates our commitment to quality and nutrition.</p>
               </div>
             </div>
           </div>
