--- a/knowus.html
+++ b/knowus.html
@@ -46,8 +46,9 @@
             <p class="profile-birth">the reason behind everything</p>
             <p>Our children are the beating hearts behind Krave. Their picky eating habits, nutritional needs, and busy schedules inspired us to create something truly special. Every product we make starts with the question: "Would we feed this to our own kids?"</p>
           </div>
-          <div class="profile-image left-aligned">
-            <img src="img/kids.jpeg" alt="Our Children" />
+          <div class="profile-image left-aligned kids-gallery">
+            <img src="img/kids.jpeg" alt="Our Children" class="kids-image" />
+            <img src="img/ariya.jpg" alt="Ariya" class="kids-image" />
           </div>
         </div>
       </div>
