added product package

--- a/products.html
+++ b/products.html
@@ -23,8 +23,8 @@
         
         <div class="product-grid">
           <div class="product-card">
-            <div class="product-image">
-              <img src="img/product-classic.jpg" alt="Classic Protein Roti" />
+            <div class="product-image" style="display: flex; justify-content: center; align-items: center; padding: 10px 0; height: auto;">
+              <img src="img/KravePackage.jpg" alt="Classic Protein Roti" style="width: 70%; height: auto; max-height: none;" />
             </div>
             <h3>Classic Protein Roti</h3>
             <p>Our signature protein-packed roti with a great taste that even kids love.</p>
@@ -40,8 +40,8 @@
           </div>
           
           <div class="product-card">
-            <div class="product-image">
-              <img src="img/product-kids-pack.jpg" alt="Kids Combo Pack" />
+            <div class="product-image" style="display: flex; justify-content: center; align-items: center; padding: 10px 0; height: auto;">
+              <img src="img/KidsPackage.png" alt="Kids Combo Pack" style="width: 70%; height: auto; max-height: none;" />
             </div>
             <h3>Kids Combo Pack</h3>
             <p>Perfect variety pack with fun shapes and taste kids adore.</p>
