--- a/products.html
+++ b/products.html
@@ -26,8 +26,8 @@
             <div class="product-image" style="display: flex; justify-content: center; align-items: center; padding: 10px 0; height: auto;">
               <img src="img/KravePackage.jpg" alt="Classic Protein Roti" style="width: 70%; height: auto; max-height: none;" />
             </div>
-            <h3>Classic Protein Roti</h3>
-            <p>Our signature protein-packed roti with a great taste that even kids love.</p>
+            <h3>Classic Protein</h3>
+            <p>Our signature protein-packed roti/tortilla with a great taste that even kids love.</p>
             <ul class="product-features">
               <li>High in plant-based protein</li>
               <li>Rich in fiber</li>
@@ -43,7 +43,7 @@
             <div class="product-image" style="display: flex; justify-content: center; align-items: center; padding: 10px 0; height: auto;">
               <img src="img/KidsPackage.png" alt="Kids Combo Pack" style="width: 70%; height: auto; max-height: none;" />
             </div>
-            <h3>Kids Combo Pack</h3>
+            <h3>Kids Pack</h3>
             <p>Perfect variety pack with fun shapes and taste kids adore.</p>
             <ul class="product-features">
               <li>Fun shapes</li>
